# life-sim

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
.github/workflows/: c-cpp.yml
backend/events/: urgent_life_event.cpp  year_logger.cpp
backend/interface/: education.cpp  events.cpp  interface.cpp  interface_private.hpp  jobs.cpp  life.cpp
backend/jobs/: company.cpp  employer.cpp  job.cpp  jobs.cpp
backend/life/: life.cpp
backend/names/: name_generator.cpp
backend/nations/: nation_generator.cpp
backend/network/: network.cpp
backend/school/: life_education.cpp
frontend/: main.cpp
frontend/gui/: main.cpp
frontend/terminal/: main.cpp
include/: events.hpp  interface.hpp  jobs.hpp  life.hpp  names.hpp  nations.hpp  network.hpp  school.hpp
